# spec/rest-api/openapi.yaml
@@ -121,6 +121,8 @@ tags:
     description: Override discovery
   - name: NVTs
     description: NVT catalog discovery
+  - name: SecInfo
+    description: SecInfo catalog discovery (CVEs, CPEs, advisories)
   - name: NVT Families
     description: NVT family discovery
   - name: System
@@ -297,6 +299,14 @@ paths:
     $ref: './supporting-resources.yaml#/paths/~1overrides'
   /overrides/{id}:
     $ref: './supporting-resources.yaml#/paths/~1overrides~1{id}'
+  /cves:
+    $ref: './supporting-resources.yaml#/paths/~1cves'
+  /cpes:
+    $ref: './supporting-resources.yaml#/paths/~1cpes'
+  /cert-bund-advisories:
+    $ref: './supporting-resources.yaml#/paths/~1cert-bund-advisories'
+  /dfn-cert-advisories:
+    $ref: './supporting-resources.yaml#/paths/~1dfn-cert-advisories'
   /nvts:
     $ref: './supporting-resources.yaml#/paths/~1nvts'
   /nvts/{id}:
